--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/at-internship/at-sso-ui.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/at-internship/at-sso-ui/issues"
+  },
+  "homepage": "https://github.com/at-internship/at-sso-ui#readme",
   "dependencies": {
     "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
@@ -27,5 +35,8 @@
     "handlebars": "^4.7.6",
     "nodemon": "^2.0.4",
     "npm-check-updates": "^9.0.4"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
