AT-SSO-UI Prepare at-ui-mocks to be migrated

--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
-  "name": "at-sso-ui",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/at-internship/at-sso-ui.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/at-internship/at-sso-ui/issues"
-  },
-  "homepage": "https://github.com/at-internship/at-sso-ui#readme",
-  "dependencies": {
-    "axios": "^0.20.0",
-    "bcryptjs": "^2.4.3",
-    "connect-flash": "^0.1.1",
-    "express": "^4.17.1",
-    "express-handlebars": "^5.1.0",
-    "express-session": "^1.17.1",
-    "method-override": "^3.0.0",
-    "morgan": "^1.10.0",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
-  },
-  "devDependencies": {
-    "dotenv": "^8.2.0",
-    "handlebars": "^4.7.6",
-    "nodemon": "^2.0.4",
-    "npm-check-updates": "^9.0.4"
-  },
-  "engines": {
-    "node": "10.x"
-  }
+    "name": "at-sso-ui",
+    "version": "1.0.0",
+    "description": "Node JS Project for AT SSO UI (Internal app)",
+    "main": "index.js",
+    "scripts": {
+        "start": "node src/index.js",
+        "dev": "nodemon src/index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/at-internship/at-sso-ui.git"
+    },
+    "keywords": [],
+    "author": "AgileThought",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/at-internship/at-sso-ui/issues"
+    },
+    "homepage": "https://github.com/at-internship/at-sso-ui#readme",
+    "dependencies": {
+        "axios": "^0.20.0",
+        "bcryptjs": "^2.4.3",
+        "connect-flash": "^0.1.1",
+        "express": "^4.17.1",
+        "express-handlebars": "^5.1.0",
+        "express-session": "^1.17.1",
+        "method-override": "^3.0.0",
+        "morgan": "^1.10.0",
+        "passport": "^0.4.1",
+        "passport-local": "^1.0.0"
+    },
+    "devDependencies": {
+        "dotenv": "^8.2.0",
+        "handlebars": "^4.7.6",
+        "nodemon": "^2.0.4",
+        "npm-check-updates": "^9.0.4"
+    },
+    "engines": {
+        "node": "10.x"
+    }
 }
