AT-SSO-UI 31 We refactor the code from at-sce-ui to at-sso-ui, USERS

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "mocha": "^8.2.1",
         "morgan": "^1.10.0",
         "nock": "^13.0.5",
+        "node-jsencrypt": "^1.0.0",
         "nyc": "^15.1.0",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
