--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "nyc": "^15.1.0",
         "passport": "^0.4.1",
         "passport-local": "^1.0.0",
+        "simple-git": "^2.39.0",
         "sinon": "^9.2.1"
     },
     "devDependencies": {
