AT-SSO-UI 31 Web Token has been implemented in Single Sign-On App

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,11 @@ AT_SCE_SERVICE_URI=https://at-sce-api-qa.herokuapp.com/api
 #MICROSERVICE - HEROKU - LOGIN/USERS
 AT_SSO_SERVICE_URI_ENABLED=false
 
+#SSO WEB TOKEN
+AT_SSO_WEB_TOKEN_ENABLED=false
+AT_SSO_WEB_TOKEN_CLIENT=
+AT_SSO_WEB_TOKEN_SECRET=
+
 #ENABLE ENCRYPTION
 LOGIN_ENCRYPTION_ENABLED=false
 CREATE_USER_ENCRYPTION_ENABLED=false
