--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ NODE_ENV=development
 PORT=4000
 
 #MICROSERVICE - HEROKU - SSO
-AT_SSO_SERVICE_URI=https://at-sso-api.herokuapp.com/api
+AT_SSO_SERVICE_URI=https://at-sso-api-qa.herokuapp.com/api
 
 #MICROSERVICE - HEROKU - UNIVERSITY
 AT_UNIVERSITY_SERVICE_URI=https://at-university-api.herokuapp.com/api
@@ -10,16 +10,25 @@ AT_UNIVERSITY_SERVICE_URI=https://at-university-api.herokuapp.com/api
 #MICROSERVICE - HEROKU - RESOURCES
 AT_RESOURCES_SERVICE_URI=https://at-resources-api.herokuapp.com/api
 
-#MICROSERVICE - HEROKU
+#MICROSERVICE - HEROKU - SCE
 AT_SCE_SERVICE_URI=https://at-sce-api-qa.herokuapp.com/api
 
 #MICROSERVICE - HEROKU - LOGIN/USERS
-AT_SSO_SERVICE_URI_ENABLED=false
+AT_SSO_SERVICE_URI_ENABLED=true
+
+#NEW RELIC MONITORING
+NEW_RELIC_APP_NAME=at-sso-ui-qa
+NEW_RELIC_LICENSE_KEY=
+
+#SSO WEB TOKEN
+AT_SSO_WEB_TOKEN_ENABLED=true
+AT_SSO_WEB_TOKEN_CLIENT=
+AT_SSO_WEB_TOKEN_SECRET=
 
 #ENABLE ENCRYPTION
-LOGIN_ENCRYPTION_ENABLED=false
-CREATE_USER_ENCRYPTION_ENABLED=false
-UPDATE_USER_ENCRYPTION_ENABLED=false
+LOGIN_ENCRYPTION_ENABLED=true
+CREATE_USER_ENCRYPTION_ENABLED=true
+UPDATE_USER_ENCRYPTION_ENABLED=true
 
 #ENCRYPTION KEYS
 RSA_PUBLIC_ENCRYPTION_KEY=
